src/cffi/classes/wxEvent.lisp


(cffi:defcfun ("wxPaletteChangedEvent_SetChangedWindow" wxPaletteChangedEvent_SetChangedWindow) :void
  (_obj :pointer)
  (win :pointer))

(cffi:defcfun ("wxPaletteChangedEvent_GetChangedWindow" wxPaletteChangedEvent_GetChangedWindow) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxQueryNewPaletteEvent_SetPaletteRealized" wxQueryNewPaletteEvent_SetPaletteRealized) :void
  (_obj :pointer)
  (realized :int))

(cffi:defcfun ("wxQueryNewPaletteEvent_GetPaletteRealized" wxQueryNewPaletteEvent_GetPaletteRealized) :int
  (_obj :pointer))

(cffi:defcfun ("wxNavigationKeyEvent_GetDirection" wxNavigationKeyEvent_GetDirection) :int
  (_obj :pointer))

(cffi:defcfun ("wxNavigationKeyEvent_SetDirection" wxNavigationKeyEvent_SetDirection) :void
  (_obj :pointer)
  (bForward :int))

(cffi:defcfun ("wxNavigationKeyEvent_IsWindowChange" wxNavigationKeyEvent_IsWindowChange) :int
  (_obj :pointer))

(cffi:defcfun ("wxNavigationKeyEvent_SetWindowChange" wxNavigationKeyEvent_SetWindowChange) :void
  (_obj :pointer)
  (bIs :int))

(cffi:defcfun ("wxNavigationKeyEvent_ShouldPropagate" wxNavigationKeyEvent_ShouldPropagate) :int
  (_obj :pointer))

(cffi:defcfun ("wxNavigationKeyEvent_GetCurrentFocus" wxNavigationKeyEvent_GetCurrentFocus) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxNavigationKeyEvent_SetCurrentFocus" wxNavigationKeyEvent_SetCurrentFocus) :void
  (_obj :pointer)
  (win :pointer))

(cffi:defcfun ("wxWindowCreateEvent_GetWindow" wxWindowCreateEvent_GetWindow) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxWindowDestroyEvent_GetWindow" wxWindowDestroyEvent_GetWindow) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxIdleEvent_RequestMore" wxIdleEvent_RequestMore) :void
  (_obj :pointer)
  (needMore :int))

(cffi:defcfun ("wxIdleEvent_MoreRequested" wxIdleEvent_MoreRequested) :int
  (_obj :pointer))

(cffi:defcfun ("wxListEvent_GetCode" wxListEvent_GetCode) :int
  (_obj :pointer))

(cffi:defcfun ("wxListEvent_GetIndex" wxListEvent_GetIndex) :int
  (_obj :pointer))

(cffi:defcfun ("wxListEvent_GetColumn" wxListEvent_GetColumn) :int
  (_obj :pointer))

(cffi:defcfun ("wxListEvent_Cancelled" wxListEvent_Cancelled) :int
  (_obj :pointer))

(cffi:defcfun ("wxListEvent_GetPoint" wxListEvent_GetPoint) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(cffi:defcfun ("wxListEvent_GetLabel" wxListEvent_GetLabel) :int
  (_obj :pointer)
  (_buf :pointer))

(cffi:defcfun ("wxListEvent_GetText" wxListEvent_GetText) :int
  (_obj :pointer)
  (_buf :pointer))

(cffi:defcfun ("wxListEvent_GetImage" wxListEvent_GetImage) :int
  (_obj :pointer))

(cffi:defcfun ("wxListEvent_GetData" wxListEvent_GetData) :int
  (_obj :pointer))

(cffi:defcfun ("wxListEvent_GetMask" wxListEvent_GetMask) :int
  (_obj :pointer))

(cffi:defcfun ("wxListEvent_GetItem" wxListEvent_GetItem) :void
  (_obj :pointer)
  (_ref :pointer))

(cffi:defcfun ("wxTreeEvent_GetItem" wxTreeEvent_GetItem) :void
  (_obj :pointer)
  (_ref :pointer))

(cffi:defcfun ("wxTreeEvent_GetOldItem" wxTreeEvent_GetOldItem) :void
  (_obj :pointer)
  (_ref :pointer))

(cffi:defcfun ("wxTreeEvent_GetPoint" wxTreeEvent_GetPoint) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(cffi:defcfun ("wxTreeEvent_GetCode" wxTreeEvent_GetCode) :int
  (_obj :pointer))

(cffi:defcfun ("wxTreeEvent_GetLabel" wxTreeEvent_GetLabel) :int
  (_obj :pointer)
  (_buf :pointer))

(cffi:defcfun ("wxSpinEvent_GetPosition" wxSpinEvent_GetPosition) :int
  (_obj :pointer))

(cffi:defcfun ("wxSpinEvent_SetPosition" wxSpinEvent_SetPosition) :void
  (_obj :pointer)
  (pos :int))

(cffi:defcfun ("wxTimerEvent_GetInterval" wxTimerEvent_GetInterval) :int
  (_obj :pointer))

(cffi:defcfun ("wxCalendarEvent_GetWeekDay" wxCalendarEvent_GetWeekDay) :int
  (_obj :pointer))

(cffi:defcfun ("wxCalendarEvent_GetDate" wxCalendarEvent_GetDate) :void
  (_obj :pointer)
  (_dte :pointer))

(cffi:defcfun ("wxScrollEvent_GetOrientation" wxScrollEvent_GetOrientation) :int
  (_obj :pointer))

(cffi:defcfun ("wxScrollEvent_GetPosition" wxScrollEvent_GetPosition) :int
  (_obj :pointer))

(cffi:defcfun ("wxHelpEvent_GetPosition" wxHelpEvent_GetPosition) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(cffi:defcfun ("wxHelpEvent_SetPosition" wxHelpEvent_SetPosition) :void
  (_obj :pointer)
  (x :int)
  (y :int))

(cffi:defcfun ("wxHelpEvent_GetLink" wxHelpEvent_GetLink) :int
  (_obj :pointer)
  (_ref :pointer))

(cffi:defcfun ("wxHelpEvent_SetLink" wxHelpEvent_SetLink) :void
  (_obj :pointer)
  (link :pointer))

(cffi:defcfun ("wxHelpEvent_GetTarget" wxHelpEvent_GetTarget) :int
  (_obj :pointer)
  (_ref :pointer))

(cffi:defcfun ("wxHelpEvent_SetTarget" wxHelpEvent_SetTarget) :void
  (_obj :pointer)
  (target :pointer))

(cffi:defcvar ("wxEVENT_COMMAND_BUTTON_CLICKED" wxEVENT_COMMAND_BUTTON_CLICKED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_CHECKBOX_CLICKED" wxEVENT_COMMAND_CHECKBOX_CLICKED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_CHOICE_SELECTED" wxEVENT_COMMAND_CHOICE_SELECTED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_LISTBOX_SELECTED" wxEVENT_COMMAND_LISTBOX_SELECTED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_LISTBOX_DOUBLECLICKED" wxEVENT_COMMAND_LISTBOX_DOUBLECLICKED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_CHECKLISTBOX_TOGGLED" wxEVENT_COMMAND_CHECKLISTBOX_TOGGLED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_TEXT_UPDATED" wxEVENT_COMMAND_TEXT_UPDATED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_TEXT_ENTER" wxEVENT_COMMAND_TEXT_ENTER)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_MENU_SELECTED" wxEVENT_COMMAND_MENU_SELECTED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_TOOL_CLICKED" wxEVENT_COMMAND_TOOL_CLICKED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_SLIDER_UPDATED" wxEVENT_COMMAND_SLIDER_UPDATED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_RADIOBOX_SELECTED" wxEVENT_COMMAND_RADIOBOX_SELECTED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_RADIOBUTTON_SELECTED" wxEVENT_COMMAND_RADIOBUTTON_SELECTED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_SCROLLBAR_UPDATED" wxEVENT_COMMAND_SCROLLBAR_UPDATED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_VLBOX_SELECTED" wxEVENT_COMMAND_VLBOX_SELECTED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_COMBOBOX_SELECTED" wxEVENT_COMMAND_COMBOBOX_SELECTED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_TOOL_RCLICKED" wxEVENT_COMMAND_TOOL_RCLICKED)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_TOOL_ENTER" wxEVENT_COMMAND_TOOL_ENTER)
 :pointer)

(cffi:defcvar ("wxEVENT_COMMAND_SPINCTRL_UPDATED" wxEVENT_COMMAND_SPINCTRL_UPDATED)
 :pointer)

(cffi:defcvar ("wxEVENT_SOCKET" wxEVENT_SOCKET)
 :pointer)

(cffi:defcvar ("wxEVENT_LEFT_DOWN" wxEVENT_LEFT_DOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_LEFT_UP" wxEVENT_LEFT_UP)
 :pointer)

(cffi:defcvar ("wxEVENT_MIDDLE_DOWN" wxEVENT_MIDDLE_DOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_MIDDLE_UP" wxEVENT_MIDDLE_UP)
 :pointer)

(cffi:defcvar ("wxEVENT_RIGHT_DOWN" wxEVENT_RIGHT_DOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_RIGHT_UP" wxEVENT_RIGHT_UP)
 :pointer)

(cffi:defcvar ("wxEVENT_MOTION" wxEVENT_MOTION)
 :pointer)

(cffi:defcvar ("wxEVENT_ENTER_WINDOW" wxEVENT_ENTER_WINDOW)
 :pointer)

(cffi:defcvar ("wxEVENT_LEAVE_WINDOW" wxEVENT_LEAVE_WINDOW)
 :pointer)

(cffi:defcvar ("wxEVENT_LEFT_DCLICK" wxEVENT_LEFT_DCLICK)
 :pointer)

(cffi:defcvar ("wxEVENT_MIDDLE_DCLICK" wxEVENT_MIDDLE_DCLICK)
 :pointer)

(cffi:defcvar ("wxEVENT_RIGHT_DCLICK" wxEVENT_RIGHT_DCLICK)
 :pointer)

(cffi:defcvar ("wxEVENT_SET_FOCUS" wxEVENT_SET_FOCUS)
 :pointer)

(cffi:defcvar ("wxEVENT_KILL_FOCUS" wxEVENT_KILL_FOCUS)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_LEFT_DOWN" wxEVENT_NC_LEFT_DOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_LEFT_UP" wxEVENT_NC_LEFT_UP)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_MIDDLE_DOWN" wxEVENT_NC_MIDDLE_DOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_MIDDLE_UP" wxEVENT_NC_MIDDLE_UP)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_RIGHT_DOWN" wxEVENT_NC_RIGHT_DOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_RIGHT_UP" wxEVENT_NC_RIGHT_UP)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_MOTION" wxEVENT_NC_MOTION)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_ENTER_WINDOW" wxEVENT_NC_ENTER_WINDOW)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_LEAVE_WINDOW" wxEVENT_NC_LEAVE_WINDOW)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_LEFT_DCLICK" wxEVENT_NC_LEFT_DCLICK)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_MIDDLE_DCLICK" wxEVENT_NC_MIDDLE_DCLICK)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_RIGHT_DCLICK" wxEVENT_NC_RIGHT_DCLICK)
 :pointer)

(cffi:defcvar ("wxEVENT_CHAR" wxEVENT_CHAR)
 :pointer)

(cffi:defcvar ("wxEVENT_CHAR_HOOK" wxEVENT_CHAR_HOOK)
 :pointer)

(cffi:defcvar ("wxEVENT_NAVIGATION_KEY" wxEVENT_NAVIGATION_KEY)
 :pointer)

(cffi:defcvar ("wxEVENT_KEY_DOWN" wxEVENT_KEY_DOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_KEY_UP" wxEVENT_KEY_UP)
 :pointer)

(cffi:defcvar ("wxEVENT_SET_CURSOR" wxEVENT_SET_CURSOR)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLL_TOP" wxEVENT_SCROLL_TOP)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLL_BOTTOM" wxEVENT_SCROLL_BOTTOM)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLL_LINEUP" wxEVENT_SCROLL_LINEUP)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLL_LINEDOWN" wxEVENT_SCROLL_LINEDOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLL_PAGEUP" wxEVENT_SCROLL_PAGEUP)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLL_PAGEDOWN" wxEVENT_SCROLL_PAGEDOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLL_THUMBTRACK" wxEVENT_SCROLL_THUMBTRACK)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLL_THUMBRELEASE" wxEVENT_SCROLL_THUMBRELEASE)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLLWIN_TOP" wxEVENT_SCROLLWIN_TOP)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLLWIN_BOTTOM" wxEVENT_SCROLLWIN_BOTTOM)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLLWIN_LINEUP" wxEVENT_SCROLLWIN_LINEUP)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLLWIN_LINEDOWN" wxEVENT_SCROLLWIN_LINEDOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLLWIN_PAGEUP" wxEVENT_SCROLLWIN_PAGEUP)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLLWIN_PAGEDOWN" wxEVENT_SCROLLWIN_PAGEDOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLLWIN_THUMBTRACK" wxEVENT_SCROLLWIN_THUMBTRACK)
 :pointer)

(cffi:defcvar ("wxEVENT_SCROLLWIN_THUMBRELEASE" wxEVENT_SCROLLWIN_THUMBRELEASE)
 :pointer)

(cffi:defcvar ("wxEVENT_SIZE" wxEVENT_SIZE)
 :pointer)

(cffi:defcvar ("wxEVENT_MOVE" wxEVENT_MOVE)
 :pointer)

(cffi:defcvar ("wxEVENT_CLOSE_WINDOW" wxEVENT_CLOSE_WINDOW)
 :pointer)

(cffi:defcvar ("wxEVENT_END_SESSION" wxEVENT_END_SESSION)
 :pointer)

(cffi:defcvar ("wxEVENT_QUERY_END_SESSION" wxEVENT_QUERY_END_SESSION)
 :pointer)

(cffi:defcvar ("wxEVENT_ACTIVATE_APP" wxEVENT_ACTIVATE_APP)
 :pointer)

(cffi:defcvar ("wxEVENT_POWER" wxEVENT_POWER)
 :pointer)

(cffi:defcvar ("wxEVENT_ACTIVATE" wxEVENT_ACTIVATE)
 :pointer)

(cffi:defcvar ("wxEVENT_CREATE" wxEVENT_CREATE)
 :pointer)

(cffi:defcvar ("wxEVENT_DESTROY" wxEVENT_DESTROY)
 :pointer)

(cffi:defcvar ("wxEVENT_SHOW" wxEVENT_SHOW)
 :pointer)

(cffi:defcvar ("wxEVENT_ICONIZE" wxEVENT_ICONIZE)
 :pointer)

(cffi:defcvar ("wxEVENT_MAXIMIZE" wxEVENT_MAXIMIZE)
 :pointer)

(cffi:defcvar ("wxEVENT_MOUSE_CAPTURE_CHANGED" wxEVENT_MOUSE_CAPTURE_CHANGED)
 :pointer)

(cffi:defcvar ("wxEVENT_PAINT" wxEVENT_PAINT)
 :pointer)

(cffi:defcvar ("wxEVENT_ERASE_BACKGROUND" wxEVENT_ERASE_BACKGROUND)
 :pointer)

(cffi:defcvar ("wxEVENT_NC_PAINT" wxEVENT_NC_PAINT)
 :pointer)

(cffi:defcvar ("wxEVENT_PAINT_ICON" wxEVENT_PAINT_ICON)
 :pointer)

(cffi:defcvar ("wxEVENT_MENU_HIGHLIGHT" wxEVENT_MENU_HIGHLIGHT)
 :pointer)

(cffi:defcvar ("wxEVENT_CONTEXT_MENU" wxEVENT_CONTEXT_MENU)
 :pointer)

(cffi:defcvar ("wxEVENT_SYS_COLOUR_CHANGED" wxEVENT_SYS_COLOUR_CHANGED)
 :pointer)

(cffi:defcvar ("wxEVENT_SETTING_CHANGED" wxEVENT_SETTING_CHANGED)
 :pointer)

(cffi:defcvar ("wxEVENT_QUERY_NEW_PALETTE" wxEVENT_QUERY_NEW_PALETTE)
 :pointer)

(cffi:defcvar ("wxEVENT_PALETTE_CHANGED" wxEVENT_PALETTE_CHANGED)
 :pointer)

(cffi:defcvar ("wxEVENT_JOY_BUTTON_DOWN" wxEVENT_JOY_BUTTON_DOWN)
 :pointer)

(cffi:defcvar ("wxEVENT_JOY_BUTTON_UP" wxEVENT_JOY_BUTTON_UP)
 :pointer)

(cffi:defcvar ("wxEVENT_JOY_MOVE" wxEVENT_JOY_MOVE)
 :pointer)

(cffi:defcvar ("wxEVENT_JOY_ZMOVE" wxEVENT_JOY_ZMOVE)
 :pointer)
